# SimpleConanPackageCreation

./: conanfile.py  readme.md
src/: CMakeLists.txt  main.cpp  myPackage.cpp  myPackage.h
test_package/: conanfile.py  example.cpp
